--- a/section-1/Section 1.ipynb
+++ b/section-1/Section 1.ipynb
@@ -22,11 +22,21 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Part 0: Getting set up and talking to ChatGPT"
+      ],
+      "metadata": {
+        "id": "M8BC8CZ34RW2"
+      },
+      "id": "M8BC8CZ34RW2"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# OpenAI API Key\n",
         "\n",
         "> Important! You cannot complete any of the section without an API Key.\n",
         "\n",
-        "**Important Security Note:** Your API key is shown only once. Save it in a secure location. Sharing your API key can lead to unauthorized usage and charges.\n",
+        "**Important Security Note:** Your API key is shown only once. **Save it in a secure location.** Sharing your API key can lead to unauthorized usage and charges.\n",
         "\n",
         "**Billing Information:**\n",
         "\n",
@@ -174,45 +184,13 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "82ef4b3c"
-      },
-      "source": [
-        "\n",
-        "## 3) Your First API Request\n",
-        "As discussed in the lecture, this is what most API requests to OpenAI will look like. Fill in the \"[YOUR PROMPT HERE]\" space however you'd like, then run the cell."
-      ],
-      "id": "82ef4b3c"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "ed5f6603"
-      },
-      "outputs": [],
-      "source": [
-        "\n",
-        "resp = client.chat.completions.create(\n",
-        "    model=MODEL,\n",
-        "    messages=[\n",
-        "        {\"role\": \"system\", \"content\": SYSTEM_PROMPT},\n",
-        "        {\"role\": \"user\", \"content\": \"[YOUR PROMPT HERE]\"}, # Ask ChatGPT whatever you want here!\n",
-        "    ],\n",
-        ")\n",
-        "print(resp.choices[0].message.content)\n"
-      ],
-      "id": "ed5f6603"
-    },
-    {
-      "cell_type": "markdown",
       "id": "c9f2555d",
       "metadata": {
         "id": "c9f2555d"
       },
       "source": [
         "\n",
-        "## 4) ChatGPT Clone\n",
+        "## 3) ChatGPT Clone\n",
         "**What this cell does**\n",
         "- Builds a message list from the system prompt + recent history + your new user input.  \n",
         "- Sends a request to the Chat Completions API.  \n",
@@ -223,13 +201,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 33,
       "id": "619f6e78",
       "metadata": {
+        "cellView": "form",
         "id": "619f6e78"
       },
       "outputs": [],
       "source": [
+        "# @title\n",
         "\n",
         "def reset_history() -> None:\n",
         "    \"\"\"Clear the global conversation history.\"\"\"\n",
@@ -317,6 +297,12 @@
         "\n",
         "#### After having a conversation with ChatGPT, feel free to change the `SYSTEM_PROMPT` field. As discussed, this will change the tone or role of the assistant. See what you can get it to do!\n",
         "\n",
+        "\n",
+        "```\n",
+        "# This is formatted as code\n",
+        "```\n",
+        "\n",
+        "\n",
         "> This is only the beginning of where things start to break from ChatGPT.\n",
         "\n"
       ],
@@ -326,10 +312,12 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "c55a48ed"
+        "id": "c55a48ed",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
+        "# @title\n",
         "SYSTEM_PROMPT = \"You are a helpful assistant\" # Tweak this later, if you would like\n",
         "\n",
         "reset_history()\n",
@@ -345,6 +333,47 @@
         "    _ = make_query(user_in)\n"
       ],
       "id": "c55a48ed"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Part 1: Your First API Request"
+      ],
+      "metadata": {
+        "id": "LrX3oYcG1zvo"
+      },
+      "id": "LrX3oYcG1zvo"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "82ef4b3c"
+      },
+      "source": [
+        "This is what most API requests to OpenAI will look like. Fill in the \"[YOUR PROMPT HERE]\" space however you'd like, then run the cell."
+      ],
+      "id": "82ef4b3c"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ed5f6603"
+      },
+      "outputs": [],
+      "source": [
+        "SYSTEM_PROMPT = \"You are a helpful assistant\" # Change this to elicit different behavior\n",
+        "\n",
+        "resp = client.chat.completions.create(\n",
+        "    model=MODEL,\n",
+        "    messages=[\n",
+        "        {\"role\": \"system\", \"content\": SYSTEM_PROMPT},\n",
+        "        {\"role\": \"user\", \"content\": \"[YOUR PROMPT HERE]\"}, # Ask ChatGPT whatever you want here!\n",
+        "    ],\n",
+        ")\n",
+        "print(resp.choices[0].message.content)\n"
+      ],
+      "id": "ed5f6603"
     },
     {
       "cell_type": "markdown",
@@ -387,9 +416,17 @@
       },
       "outputs": [],
       "source": [
+        "SYSTEM_PROMPT = \"You are a world famous poet.\"\n",
         "\n",
-        "_ = chat_once(\"Write a haiku about the challenges of urban housing policy.\")\n",
-        "reset_history()\n"
+        "resp = client.chat.completions.create(\n",
+        "    model=MODEL,\n",
+        "    messages=[\n",
+        "        {\"role\": \"system\", \"content\": SYSTEM_PROMPT},\n",
+        "        {\"role\": \"user\", \"content\": \"[YOUR HAIKU HERE]\"}, # Ask ChatGPT whatever you want here!\n",
+        "    ],\n",
+        ")\n",
+        "\n",
+        "print(resp.choices[0].message.content)\n"
       ]
     },
     {
@@ -429,9 +466,7 @@
         "{policy_text}\n",
         "\"\"\"\n",
         "\n",
-        "# Your turn! Implement an API request that sends both the policy text and the prompt to the model.\n",
-        "\n",
-        "# Hint: Section 3 of this notebook may be helpful\n"
+        "# Your turn! Implement an API request that sends both the policy text and the prompt to the model.\n"
       ]
     },
     {
@@ -442,7 +477,7 @@
       },
       "source": [
         "\n",
-        "## Option 3: “issue of interest” query (easy)\n",
+        "## Option 3: “issue of interest” query (medium)\n",
         "Prompt the user to input a policy area of interest, and send a request to the model asking for for a discussion of that area."
       ]
     },
@@ -459,8 +494,6 @@
         "\n",
         "# To capture interactive user input, you can use the input() function\n",
         "# For example: input(\"What is your policy area of interest? \")\n",
-        "\n",
-        "# Then, refer to Section 3 of this workbook for how to make your request.\n",
         "# You should pass the user input policy area of interest, your system prompt, and any other prompt scaffolding you see fit.\n"
       ]
     },
@@ -488,7 +521,7 @@
         "\n",
         "# Simple version\n",
         "\n",
-        "# Ask the LLM to weigh the pros and cons of a specific policy area of interest. Again, consult section 3 of this notebook for how to make this request"
+        "# Ask an LLM to weigh the pros and cons of a specific policy area of interest."
       ]
     },
     {
@@ -502,7 +535,9 @@
         "\n",
         "1. Have Agent B not only present their case but respond to Agent A. How might you do that?\n",
         "2. Have the agents iteratively discuss things (use a `for` loop and feed the messages back and forth\n",
-        "3. Implement a debate moderator who looks at both messages and summarizes them.\n"
+        "3. Implement a debate moderator who looks at both messages and summarizes them.\n",
+        "\n",
+        "How does having two different LLMs with two different system prompts change the quality of discussion?"
       ],
       "metadata": {
         "id": "DR_e8qpJxC7C"
