update save to drive

--- a/section-1/Section 1.ipynb
+++ b/section-1/Section 1.ipynb
@@ -16,7 +16,9 @@
         "3. Use a small chat loop to simulate using ChatGPT from your notebook.\n",
         "4. Extend this knowledge to a policy chatbot.\n",
         "\n",
-        "> Privacy note: Your API key stays in this runtime. Avoid sharing the notebook after entering your key.\n"
+        "> Privacy note: Your API key stays in this runtime. Avoid sharing the notebook after entering your key.\n",
+        "\n",
+        "**Remember, before you start:** Click File → Save a copy in Drive. This way you will not lose your progress if you want to refer back to this later!"
       ]
     },
     {
@@ -78,7 +80,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "fb1523e5",
       "metadata": {
         "cellView": "form",
@@ -114,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "1b2d4f4a",
       "metadata": {
         "cellView": "form",
@@ -162,7 +164,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "ec967931",
       "metadata": {
         "id": "ec967931"
@@ -201,7 +203,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "id": "619f6e78",
       "metadata": {
         "cellView": "form",
@@ -511,7 +513,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "id": "2a92f3ee",
       "metadata": {
         "id": "2a92f3ee"
