--- a/section-2/Section 2.ipynb
+++ b/section-2/Section 2.ipynb
@@ -1,93 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "7ca11ff1",
-      "metadata": {
-        "id": "7ca11ff1"
-      },
-      "outputs": [],
-      "source": [
-        "from openai import OpenAI\n",
-        "import json"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "5d5790c6",
-      "metadata": {
-        "id": "5d5790c6"
-      },
-      "source": [
-        "CHALLENGE: Using the prompt engineering tools you learned this week, design a prompt that extracts something you might want to know about the article.\n",
-        "This should be something you might want to convert into data to analyse later, like political slant, sentiment, or a rating of the article's quality"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "ebe5de2a",
-      "metadata": {
-        "id": "ebe5de2a"
-      },
-      "outputs": [],
-      "source": [
-        "system_prompt = \"\"\"\n",
-        "   YOUR PROMPT HERE\n",
-        "\"\"\""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "b272a60f",
-      "metadata": {
-        "id": "b272a60f"
-      },
-      "outputs": [],
-      "source": [
-        "# Read the article content from the file\n",
-        "with open('./section-2/article.txt', 'r', encoding='utf-8') as file:\n",
-        "    article_content = file.read()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "9bb6e4c0",
-      "metadata": {
-        "id": "9bb6e4c0"
-      },
-      "outputs": [],
-      "source": [
-        "# Create a chat completion request to analyze the article\n",
-        "completion = client.chat.completions.create(\n",
-        "    model=\"gpt-4o\",\n",
-        "     messages=[\n",
-        "         #might need to add something here?\n",
-        "        {\"role\": \"user\", \"content\": \"Analyze this article as instructed:\\n\" + article_content}\n",
-        "    ],\n",
-        "    #or sometihng here? does this change with what model you use?\n",
-        ")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "723f5ce4",
-      "metadata": {
-        "lines_to_next_cell": 2,
-        "id": "723f5ce4"
-      },
-      "outputs": [],
-      "source": [
-        "# Parse the response and print the JSON object\n",
-        "response_content = completion.choices[0].message.content\n",
-        "print(\"The model returned:\" + response_content)"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "id": "dfca58ce",
       "metadata": {
@@ -119,33 +32,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 36,
       "id": "991f7247",
       "metadata": {
-        "id": "991f7247",
-        "outputId": "2f7bf04b-8270-4b42-da32-afb28e9b2edc",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "cellView": "form",
+        "id": "991f7247"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Loaded from URL: https://raw.githubusercontent.com/calisley/dpi-681/refs/heads/main/section-2/article.txt (5,964 chars)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# @title\n",
         "#@ Title\n",
         "import requests\n",
-        "import json, pandas as pd\n",
+        "import json, polars as pl\n",
         "import openai\n",
         "from openai import OpenAI\n",
         "import os\n",
         "from google.colab import userdata\n",
+        "from tqdm import tqdm\n",
         "\n",
         "OPENAI_API_KEY = userdata.get('OPENAI_API_KEY')\n",
         "\n",
@@ -187,53 +90,28 @@
       "source": [
         "text = \"Hello \" + \"World\"\n",
         "\n",
-        "print(text) # -> \"Hello World\"\n"
+        "print(text) # -> \"Hello World\""
       ],
       "metadata": {
-        "id": "S328mk3L7LLr",
-        "outputId": "fc7da749-0b06-416f-ef8b-cf17e7725785",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "S328mk3L7LLr"
       },
       "id": "S328mk3L7LLr",
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "HelloWorld\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "name = \"Calvin\"\n",
         "\n",
-        "\n",
         "print(\"Hello \" + name) # --> \"Hello Calvin#"
       ],
       "metadata": {
-        "id": "2JP1Ccwt7N95",
-        "outputId": "c1e6f4e6-b605-4708-d423-c36dfb21d4e0",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "2JP1Ccwt7N95"
       },
       "id": "2JP1Ccwt7N95",
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hello Calvin\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -259,23 +137,11 @@
         "print(f\"Loaded from URL: {URL} ({len(article_text):,} chars)\")\n"
       ],
       "metadata": {
-        "id": "oRCEdiv-8uTX",
-        "outputId": "6e361e69-0163-43f2-b96d-c46c578d5bb4",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "oRCEdiv-8uTX"
       },
       "id": "oRCEdiv-8uTX",
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Loaded from URL: https://raw.githubusercontent.com/calisley/dpi-681/refs/heads/main/section-2/article.txt (5,964 chars)\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -312,6 +178,145 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## 3) Interlude on Polars and Loops"
+      ],
+      "metadata": {
+        "id": "a8jv-EtTDYCI"
+      },
+      "id": "a8jv-EtTDYCI"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Example: Basic DataFrame"
+      ],
+      "metadata": {
+        "id": "xzWuUUxaDn8e"
+      },
+      "id": "xzWuUUxaDn8e"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data = {\n",
+        "    \"name\": [\"Alice\", \"Bob\"],\n",
+        "    \"age\": [25, 30]\n",
+        "}\n",
+        "\n",
+        "df = pl.DataFrame(data)\n",
+        "print(df)"
+      ],
+      "metadata": {
+        "id": "BOGWGmeNDYrj"
+      },
+      "id": "BOGWGmeNDYrj",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Example: Reading in some data"
+      ],
+      "metadata": {
+        "id": "ikusGg4sEbPE"
+      },
+      "id": "ikusGg4sEbPE"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "URL = \"https://raw.githubusercontent.com/calisley/dpi-681/refs/heads/main/section-2/articles.csv\"\n",
+        "article_df = pl.read_csv(URL)\n",
+        "print(article_df.head()) #prints the first 5 rows"
+      ],
+      "metadata": {
+        "id": "7UvT9fhsEecN"
+      },
+      "id": "7UvT9fhsEecN",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Example: Basic Loop"
+      ],
+      "metadata": {
+        "id": "SfaPYTxXDtL6"
+      },
+      "id": "SfaPYTxXDtL6"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = [1, 2, 3, 4]\n",
+        "for num in numbers:\n",
+        "    print(num)"
+      ],
+      "metadata": {
+        "id": "lHACley9Dne8"
+      },
+      "id": "lHACley9Dne8",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Example: Looping over a dataframe\n",
+        "\n",
+        "> Important: Note how we extracted the \"name\" value for each row (`row['name']`) Think of this like each row being a dictionary, where the key is the column name and the value is the value you want."
+      ],
+      "metadata": {
+        "id": "mzX5PefBDy9s"
+      },
+      "id": "mzX5PefBDy9s"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df = pl.DataFrame({\n",
+        "  \"name\": [\"Alice\", \"Bob\"],\n",
+        "  \"age\": [25, 30]\n",
+        "})\n",
+        "\n",
+        "for row in df.iter_rows(named=True):\n",
+        "    print(row[\"name\"])"
+      ],
+      "metadata": {
+        "id": "7GFyDHq9D3PD"
+      },
+      "id": "7GFyDHq9D3PD",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Example: Looping over our article dataframe"
+      ],
+      "metadata": {
+        "id": "UKNi4XERFpb4"
+      },
+      "id": "UKNi4XERFpb4"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for row in article_df.iter_rows(named=True):\n",
+        "    print(row[\"truncated_article\"]) # Here, we extract the truncated article by its column name as shown above"
+      ],
+      "metadata": {
+        "id": "3iCjEbFjFewF"
+      },
+      "id": "3iCjEbFjFewF",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
       "id": "13d96cdb",
       "metadata": {
         "id": "13d96cdb"
@@ -319,61 +324,56 @@
       "source": [
         "\n",
         "## 3) Large Scale Data Analysis\n",
-        "\n",
-        "- For one student or quick experiments, saving to Colab's /content is fine but ephemeral.\n",
-        "- For class use, create a Google Drive folder, e.g. `MyDrive/course_data/section2/`. Keep a stable path.\n",
-        "- If you want students to download a canonical CSV reliably, place it in Drive and share a view-only link, or host it at a public URL (e.g., GitHub raw).\n",
-        "\n",
-        "Below is a helper to fetch a CSV from:\n",
-        "- Drive via file ID using `gdown`, or\n",
-        "- URL via `pandas.read_csv(URL)`.\n"
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "551c00d1",
-      "metadata": {
-        "id": "551c00d1"
-      },
-      "outputs": [],
       "source": [
+        "outputs = []\n",
         "\n",
-        "# Example: fetch CSV from Google Drive by file ID (recommended for class distribution)\n",
-        "# 1) Put CSV in Drive, right-click -> \"Get link\" -> copy the file ID from the URL.\n",
-        "# 2) Paste the ID below.\n",
-        "USE_GDRIVE_CSV = False\n",
-        "GDRIVE_FILE_ID = \"1abcDEF_fake_id_example\"  # <-- replace with real file ID\n",
-        "CSV_OUT = \"/content/my_dataset.csv\"\n",
+        "for row in tqdm(\n",
+        "    article_df.iter_rows(named=True),\n",
+        "    total=article_df.height,          # total rows for an accurate bar\n",
+        "    desc=\"Analyzing articles\"\n",
+        "):\n",
+        "    resp = # put your API request here (seen above in section 1)\n",
+        "    # for speed, I would use gpt-5-nano, not gpt-5-mini\n",
+        "    outputs.append(resp.output_text)   # <- collect one result per row\n",
         "\n",
-        "if USE_GDRIVE_CSV:\n",
-        "    import gdown, pandas as pd\n",
-        "    url = f\"https://drive.google.com/uc?id={GDRIVE_FILE_ID}\"\n",
-        "    gdown.download(url, CSV_OUT, quiet=False)\n",
-        "    df_csv = pd.read_csv(CSV_OUT)\n",
-        "    print(df_csv.head())\n"
-      ]
+        "# Add results as a new column\n",
+        "article_df = article_df.with_columns(pl.Series(\"output\", outputs))\n",
+        "\n",
+        "print(article_df.head())"
+      ],
+      "metadata": {
+        "id": "webW7CcrGQaN"
+      },
+      "id": "webW7CcrGQaN",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 3.1) If time, try to vibe code some analysis of this data.\n",
+        "\n",
+        "Ask Gemini to generate you a plot of your data."
+      ],
+      "metadata": {
+        "id": "o2er-fzsIM5B"
+      },
+      "id": "o2er-fzsIM5B"
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "da29bea5",
+      "source": [],
       "metadata": {
-        "id": "da29bea5"
+        "id": "0qhZKFN6GRvq"
       },
-      "outputs": [],
-      "source": [
-        "\n",
-        "# Alternative: load a CSV from a public URL\n",
-        "USE_URL_CSV = False\n",
-        "CSV_URL = \"https://raw.githubusercontent.com/mwaskom/seaborn-data/master/iris.csv\"  # example\n",
-        "\n",
-        "if USE_URL_CSV:\n",
-        "    import pandas as pd\n",
-        "    df_csv = pd.read_csv(CSV_URL)\n",
-        "    print(\"Loaded CSV from URL:\", CSV_URL)\n",
-        "    print(df_csv.head())\n"
-      ]
+      "id": "0qhZKFN6GRvq",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
