--- a/section-2/Section 2.ipynb
+++ b/section-2/Section 2.ipynb
@@ -10,13 +10,11 @@
         "\n",
         "# Section 2: Article Analyzer\n",
         "\n",
-        "This Colab notebook analyzes the tarrif article using OpenAI's **Responses API** .\n",
-        "It demonstrates **structured outputs** (JSON Schema) so you can convert model judgements into clean data (e.g., political slant, sentiment, and article quality).\n",
+        "This Colab notebook analyzes articles using OpenAI's **Responses API**\n",
         "\n",
         "### What you'll learn\n",
-        "- How to call the Responses API with `response_format={\"type\":\"json_schema\", ... , \"strict\": true}`.\n",
-        "- How to design a robust extraction prompt with clear rubrics to reduce ambiguity.\n",
-        "- How to parse and store the model's JSON into a pandas DataFrame for later analysis.\n"
+        "- How to call the Responses API\n",
+        "- How to parse and store the model's JSON into a polars DataFrame for later analysis.\n"
       ]
     },
     {
