--- a/section-3/Section 3.ipynb
+++ b/section-3/Section 3.ipynb
@@ -40,22 +40,10 @@
       "cell_type": "code",
       "metadata": {
         "trusted": true,
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "SCZxJivV5sbH",
-        "outputId": "dd659ee3-f034-4132-daeb-7eb61bec5218"
+        "id": "SCZxJivV5sbH"
       },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "OPENAI_API_KEY is set in Colab Secrets.\n"
-          ]
-        }
-      ],
+      "execution_count": null,
+      "outputs": [],
       "source": [
         "from google.colab import userdata\n",
         "from google.colab.userdata import SecretNotFoundError\n",
@@ -82,7 +70,7 @@
       "source": [
         "## Setup — Install Dependencies\n",
         "\n",
-        "Installs runtime libraries. We pin FAISS to CPU flavor for portability. Also installs `gdown` to fetch the shared folder by ID if needed."
+        "Installs runtime libraries. Also installs `gdown` to fetch the shared folder by ID if needed."
       ],
       "id": "SmES3lc15sbH"
     },
@@ -90,23 +78,10 @@
       "cell_type": "code",
       "metadata": {
         "trusted": true,
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "gnwyDuT85sbH",
-        "outputId": "920095c2-d934-4f76-d107-ff1def5f1ebb"
+        "id": "gnwyDuT85sbH"
       },
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m31.4/31.4 MB\u001b[0m \u001b[31m56.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h"
-          ]
-        }
-      ],
+      "execution_count": 47,
+      "outputs": [],
       "source": [
         "!pip -q install polars==1.* faiss-cpu openai==1.* tqdm pillow gdown"
       ],
@@ -131,24 +106,11 @@
       "cell_type": "code",
       "metadata": {
         "trusted": true,
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "cellView": "form",
-        "id": "DyildHK65sbI",
-        "outputId": "a557fc91-bd8d-41b7-9653-27d087b3dc3a"
+        "id": "DyildHK65sbI"
       },
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n",
-            "Using downloaded class folder: /content/class_materials\n"
-          ]
-        }
-      ],
+      "execution_count": null,
+      "outputs": [],
       "source": [
         "# @title\n",
         "import os\n",
@@ -194,33 +156,23 @@
         "print(\"STUDENT_WORKDIR:\", STUDENT_WORKDIR)"
       ],
       "metadata": {
-        "id": "u-GTpKwC8VEA",
-        "outputId": "4fade450-e3cf-4f86-e179-a464717e6df8",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "u-GTpKwC8VEA"
       },
       "id": "u-GTpKwC8VEA",
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "STUDENT_WORKDIR: /content/drive/MyDrive/DPI681 RAG Data\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "trusted": true,
+        "cellView": "form",
         "id": "uvC0mBl65sbI"
       },
-      "execution_count": 17,
+      "execution_count": 50,
       "outputs": [],
       "source": [
+        "# @title\n",
         "# Common imports\n",
         "import os, json\n",
         "from typing import List, Dict, Any\n",
@@ -257,7 +209,7 @@
         "trusted": true,
         "id": "ZCk5-ypL5sbJ"
       },
-      "execution_count": 27,
+      "execution_count": 51,
       "outputs": [],
       "source": [
         "IMAGES_CSV = os.path.join(CLASS_FOLDER, \"images.csv\")       # must include columns: image_id, url\n",
@@ -280,45 +232,10 @@
       "cell_type": "code",
       "metadata": {
         "trusted": true,
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 192
-        },
-        "id": "Qq4_EuxZ5sbJ",
-        "outputId": "6ba9dbff-8cda-4988-bb67-d04585cf7ced"
+        "id": "Qq4_EuxZ5sbJ"
       },
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "shape: (3, 2)\n",
-              "┌──────────┬─────────────────────────────────┐\n",
-              "│ image_id ┆ url                             │\n",
-              "│ ---      ┆ ---                             │\n",
-              "│ i64      ┆ str                             │\n",
-              "╞══════════╪═════════════════════════════════╡\n",
-              "│ 40       ┆ https://api.time.com/wp-conten… │\n",
-              "│ 60       ┆ https://api.time.com/wp-conten… │\n",
-              "│ 20       ┆ https://api.time.com/wp-conten… │\n",
-              "└──────────┴─────────────────────────────────┘"
-            ],
-            "text/html": [
-              "<div><style>\n",
-              ".dataframe > thead > tr,\n",
-              ".dataframe > tbody > tr {\n",
-              "  text-align: right;\n",
-              "  white-space: pre-wrap;\n",
-              "}\n",
-              "</style>\n",
-              "<small>shape: (3, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>image_id</th><th>url</th></tr><tr><td>i64</td><td>str</td></tr></thead><tbody><tr><td>40</td><td>&quot;https://api.time.com/wp-conten…</td></tr><tr><td>60</td><td>&quot;https://api.time.com/wp-conten…</td></tr><tr><td>20</td><td>&quot;https://api.time.com/wp-conten…</td></tr></tbody></table></div>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 22
-        }
-      ],
+      "execution_count": null,
+      "outputs": [],
       "source": [
         "if not os.path.exists(IMAGES_CSV):\n",
         "    raise FileNotFoundError(f\"images.csv not found at {IMAGES_CSV}. Check the shared folder or fallback download.\")\n",
@@ -343,36 +260,10 @@
       "cell_type": "code",
       "metadata": {
         "trusted": true,
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "-yLHEk7g5sbJ",
-        "outputId": "9b9c643b-c477-44cd-923e-7522db5b3f7f"
+        "id": "-yLHEk7g5sbJ"
       },
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Processing Images: 100%|██████████| 5/5 [01:06<00:00, 13.40s/it]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Image analysis complete. Results saved to: /content/drive/MyDrive/DPI681 RAG Data/images_analysis_results.csv\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\n"
-          ]
-        }
-      ],
+      "execution_count": null,
+      "outputs": [],
       "source": [
         "results_raw: List[Dict[str, Any]] = []\n",
         "\n",
@@ -409,48 +300,11 @@
         "results"
       ],
       "metadata": {
-        "id": "b5aVlKZy_Hku",
-        "outputId": "216434d5-057f-43e4-db13-6c01aaa46de6",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 255
-        }
+        "id": "b5aVlKZy_Hku"
       },
       "id": "b5aVlKZy_Hku",
-      "execution_count": 30,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "shape: (5, 3)\n",
-              "┌──────────┬─────────────────────────────────┬─────────────────────────────────┐\n",
-              "│ image_id ┆ url                             ┆ output_text                     │\n",
-              "│ ---      ┆ ---                             ┆ ---                             │\n",
-              "│ i64      ┆ str                             ┆ str                             │\n",
-              "╞══════════╪═════════════════════════════════╪═════════════════════════════════╡\n",
-              "│ 40       ┆ https://api.time.com/wp-conten… ┆ I’m sorry — I can’t help ident… │\n",
-              "│ 60       ┆ https://api.time.com/wp-conten… ┆ Sorry — I can’t help identify … │\n",
-              "│ 20       ┆ https://api.time.com/wp-conten… ┆ Sorry — I can’t help identify … │\n",
-              "│ 45       ┆ https://api.time.com/wp-conten… ┆ Sorry — I can’t help identify … │\n",
-              "│ 47       ┆ https://api.time.com/wp-conten… ┆ Sorry — I can’t help identify … │\n",
-              "└──────────┴─────────────────────────────────┴─────────────────────────────────┘"
-            ],
-            "text/html": [
-              "<div><style>\n",
-              ".dataframe > thead > tr,\n",
-              ".dataframe > tbody > tr {\n",
-              "  text-align: right;\n",
-              "  white-space: pre-wrap;\n",
-              "}\n",
-              "</style>\n",
-              "<small>shape: (5, 3)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>image_id</th><th>url</th><th>output_text</th></tr><tr><td>i64</td><td>str</td><td>str</td></tr></thead><tbody><tr><td>40</td><td>&quot;https://api.time.com/wp-conten…</td><td>&quot;I’m sorry — I can’t help ident…</td></tr><tr><td>60</td><td>&quot;https://api.time.com/wp-conten…</td><td>&quot;Sorry — I can’t help identify …</td></tr><tr><td>20</td><td>&quot;https://api.time.com/wp-conten…</td><td>&quot;Sorry — I can’t help identify …</td></tr><tr><td>45</td><td>&quot;https://api.time.com/wp-conten…</td><td>&quot;Sorry — I can’t help identify …</td></tr><tr><td>47</td><td>&quot;https://api.time.com/wp-conten…</td><td>&quot;Sorry — I can’t help identify …</td></tr></tbody></table></div>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 30
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
